Fixed contribution form spacings (when there's an error)

--- a/app/client/stylesheets/components/pu-row.sass
+++ b/app/client/stylesheets/components/pu-row.sass
@@ -38,6 +38,10 @@
     .stretch
         width: 100%
 
+    &-top
+        .cell
+            vertical-align: top
+
     &-scalable
         display: block
         overflow: auto
